--- a/src/CoisasAFazer.Services/CoisasAFazer.Services.csproj
+++ b/src/CoisasAFazer.Services/CoisasAFazer.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CoisasAFazer.Core\CoisasAFazer.Core.csproj" />
     <ProjectReference Include="..\CoisasAFazer.Infrastructure\CoisasAFazer.Infrastructure.csproj" />
   </ItemGroup>
